--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-body {
+* {
     font-family: "Inria Serif", serif;
-    font-weight: 300;
     font-style: normal;
-    min-height: 100vh;
     margin: 0;
     padding: 0;
+}
+
+body {
+    min-height: 100vh;
 }
 
 header {
@@ -12,11 +14,14 @@ header {
     background-image: linear-gradient(187deg, #FA8816 -1.34%, #FA4616 119.5%);
     background-size: cover;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 15px;
     color: white;
     text-align: center;
     padding-top: 80px;
-    padding-bottom: 1px;
+    padding-bottom: 10px;
+}
+header img{
+    margin-bottom: 10px;
 }
 
 main {
@@ -24,60 +29,51 @@ main {
     width: 100%;
     margin: 0;
     padding: 0;
-    border: none;
     text-align: center;
     font-size: 24px;
-    color: #FA8816;
 }
 
-h2 {
+main h2 {
     color: #FA7616;
     font-size: 28px;
     font-style: normal;
     font-weight: 700;
+    margin: 23px;
 }
 
 label {
-    color: black;
-    font-size: 12px;
+    color: #000;
+    text-align: center;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
-div {
-    margin: 0px;
-}
-
+/* Button */
 .Button {
+    width: 80%;
+    height: 41px;
+    margin: 5px;
     align-items: center;
     background-color: #FA5A16;
     border: none;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
     color: #fff;
-    cursor: pointer;
     font-size: 16px;
     font-weight: 600;
-    margin: 5px;
-    position: relative;
-    text-decoration: none;
-    transition: all 250ms;
-    width: 80%;
-    height: 41px;
-}
-
-.Button:hover,
-.Button:focus {
-    background-color: #fb8332;
-    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+    cursor: pointer;
+    transition: all 0.2s;
 }
 
 .Button:hover {
-    transform: translateY(-1px);
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+    background-color: #fb8332;
 }
 
 .Button:active {
-    background-color: #c85000;
-    box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
-    transform: translateY(0);
+    transform: scale(0.95);
 }
 
 .ButtonWhite {
@@ -86,6 +82,13 @@ div {
     border: #AEAEAE solid 2px;
 }
 
+.ButtonWhite:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+    background-color: #fb8332;
+    color: white;
+}
+
+/* TextBox */
 .TextBox {
     margin: auto;
     display: flex;
@@ -103,17 +106,17 @@ div {
     align-items: center;
     border: rgb(146, 146, 146) solid 1px;
     border-radius: 8px;
-    box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
     color: black;
-    cursor: pointer;
     font-size: 16px;
     font-weight: 600;
     margin: 5px;
-    position: relative;
-    text-decoration: none;
-    transition: all 250ms;
     height: 40px;
     width: 100%;
     box-sizing: border-box;
     padding: 15px;
+}
+
+#PasswordBox {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
