--- a/style.css
+++ b/style.css
@@ -25,7 +25,11 @@ body {
 /* header */
 .login-header {
     width: 100%;
-    padding: 80px 20px 10px 20px;
+    /* padding: 80px 20px 10px 20px; */
+    padding-top: calc(30px + env(safe-area-inset-top));
+    padding-left: calc(20px + env(safe-area-inset-left));
+    padding-right: calc(20px + env(safe-area-inset-right));
+    padding-bottom: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
