--- a/style.css
+++ b/style.css
@@ -260,3 +260,87 @@ body {
     display: flex;
     justify-content: center;
 }
+
+/* ============================================
+  สไตล์สำหรับหน้าลงทะเบียน
+============================================
+*/
+/* main */
+.Register-main {
+    text-align: center;
+    font-size: 24px;
+    padding: 20px 0;
+}
+
+
+.Register-main h2 {
+    color: var(--primary-color);
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 23px;
+}
+
+.register-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    width: 100%;
+}
+.form-group:first-of-type {
+    margin-bottom: 0;
+}
+.permission {
+    font-size: 12px;
+    color: var(--text-secondary);
+    width: 80%;
+    max-width: 400px;
+    text-align: left;
+}
+.or-login {
+    font-size: 14px;
+    color: var(--text-secondary);
+}
+.alreadyhave {
+    font-size: 14px;
+    color: var(--primary-color);
+    text-decoration: none;
+    margin-left: 5px;
+}
+
+.name-group {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    max-width: 400px;
+}
+
+.name-group label {
+    color: var(--text-dark);
+    font-size: 13px;
+    font-weight: 400;
+    text-align: left;
+    margin-bottom: 5px;
+    width: 100%;
+}
+.usenamebox {
+    text-align: left;
+    align-items: center;
+    width: 46%;
+}
+.lastnamebox {
+    text-align: left;
+    width: 46%;
+}
+.name-group input {
+    border: var(--border-color) solid 1px;
+    border-radius: 8px;
+    color: var(--text-dark);
+    font-size: 16px;
+    font-weight: 600;
+    height: 40px;
+    width: 100%;
+    padding: 15px;
+}
