--- a/css/page-home.css
+++ b/css/page-home.css
@@ -154,10 +154,30 @@ body {
     font-size: 20px;
 }
 
+#tag-list-item {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#tag-list-item span {
+    color: #FA5A16;
+    border: #FA5A16 solid 1px;
+    border-radius: 3.5px;
+    padding: 0px 10px;
+    margin: 2px 5px;
+}
+
+#address-activity {
+    color: #FA5A16;
+    border: #FA5A16 solid 1px;
+    border-radius: 3.5px;
+    padding: 0px 10px;
+}
+
 /* separator-line */
 .separator-line {
     width: 95%;
-    border: #AEAEAE solid 2px;
+    border: #aaaaaa solid 2px;
     border-radius: 25px;
     margin: 5px auto;
 }
@@ -185,7 +205,18 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap
+    flex-wrap: wrap;
+}
+
+.third-row-item-body {
+    margin-top: 5px;
+}
+
+.frist-row-item-body {
+    font-size: 20px;
+}
+.third-row-item-body #time-activity{
+    font-size: 20px;
 }
 
 .frist-row-item-body h2 {
@@ -196,12 +227,17 @@ body {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.second-row-item-body {
+    display: flex;
 }
 
 .second-row-item-body span {
     justify-content: start;
     flex-wrap: wrap;
-    gap: 0px;
 }
 
 .btn-room-item {
@@ -225,6 +261,7 @@ body {
 .btn-room-item:active {
     background-color: var(--primary-color);
 }
+
 
 
 /* ---------- ADD ROOM ---------- */
@@ -355,9 +392,7 @@ body {
 }
 
 /* กล่องวัน/เดือน/ปี */
-.date-input {
-    
-}
+.date-input {}
 
 .date-year {
     width: 90px;
