--- a/css/page-addroom.css
+++ b/css/page-addroom.css
@@ -88,11 +88,18 @@ body {
     width: 100%;
     aspect-ratio: 16 / 9;
     border-radius: 12px;
-    border: 1px dashed #d0d0d0;
+    border: 1px solid #d0d0d0;
     background-color: #F3F3F3;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.add-cover-box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
 }
 
 .add-cover-plus {
@@ -116,7 +123,7 @@ body {
 .form-group {
     width: 100%;
     margin-bottom: 12px;
-    font-size: 14px;
+    font-size: 16px;
     color: var(--text-dark);
 }
 
@@ -136,7 +143,7 @@ body {
     border-radius: 10px;
     background-color: #ffffff;
     padding: 0px 10px;
-    font-size: 14px;
+    font-size: 16px;
     outline: none;
     text-align: left;
     box-sizing: border-box;
@@ -208,4 +215,64 @@ body {
     font-size: 12px;
     font-weight: 400;
     text-align: center;
+}
+/* more add room */
+#tag-list-item {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#tag-list-item span {
+    color: #FA5A16;
+    border: #FA5A16 solid 1px;
+    border-radius: 3.5px;
+    padding: 0px 10px;
+    margin: 2px 5px;
+}
+
+#address-activity {
+    color: #FA5A16;
+    border: #FA5A16 solid 1px;
+    border-radius: 3.5px;
+    padding: 0px 10px;
+}
+
+.member-room-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+.profile-member {
+    margin-left: 7px;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 16px;
+    gap: 8px;
+}
+
+.profile-member img {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.creditperson {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+    gap: 4px;
+    color: var(--text-dark);
+}
+
+.credit-person img {
+    width: 18px;
+    height: 18px;
+    object-fit: contain;
 }
