--- a/css/page-add-room.css
+++ b/css/page-add-room.css
@@ -77,12 +77,6 @@ body {
     flex-direction: column;
 }
 
-/* กล่องอัปโหลดรูป */
-.add-cover-upload {
-    width: 100%;
-    margin-bottom: 8px;
-}
-
 .add-cover-box {
     width: 100%;
     aspect-ratio: 16 / 9;
@@ -114,7 +108,8 @@ body {
 }
 
 
-.add-room-form,.detail-room-form {
+.add-room-form,
+.detail-room-form {
     width: 100%;
     margin-top: 10px;
 }
@@ -136,7 +131,7 @@ body {
 .add-room-form input[type="date"],
 .add-room-form input[type="text"],
 .add-room-form textarea,
-.detail-room-form textarea{
+.detail-room-form textarea {
     width: 100%;
     height: 36px;
     border: 1px solid var(--border-color);
@@ -166,6 +161,23 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 25px;
+}
+
+.tag-group{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.tag-group .btn{
+    width: 40px;
+    height: 36px;
+    font-size: 24px;
+    line-height: 0px;
+    font-weight: 500;
+    border-radius: 0px 10px 10px 0px;
+}
+.tag-group input[type="text"]{
+    border-radius: 10px 0px 0px 10px;
 }
 
 /* footer */
@@ -210,6 +222,15 @@ body {
     font-size: 12px;
     font-weight: 400;
     text-align: center;
+}
+
+.hidden-file-input {
+    display: none;
+}
+
+/* (เผื่อไว้) ทำให้ label คลิกได้ทั้งก้อน */
+.add-cover-label {
+    cursor: pointer;
 }
 
 /* more add room */
@@ -274,7 +295,7 @@ body {
     object-fit: contain;
 }
 
-.add-room-form textarea{
+.add-room-form textarea {
     padding: 10px;
     min-height: 150px;
 }
