--- a/css/page-add-room.css
+++ b/css/page-add-room.css
@@ -43,16 +43,15 @@ body {
     padding-left: calc(20px + env(safe-area-inset-left));
     padding-right: calc(20px + env(safe-area-inset-right));
     padding-bottom: 18px;
-
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 
-    background: var(--primary-gradient-start);
-    background-image: linear-gradient(187deg, var(--primary-gradient-start) -1.34%, var(--primary-color-dark) 119.5%);
+    background: linear-gradient(180deg, #FA5A16 0%, #FA8816 100%);
     background-size: cover;
     color: var(--text-light);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .05);
 }
 
 /* กล่องเปล่าฝั่งขวา */
@@ -83,16 +82,20 @@ body {
 }
 
 .add-cover-box {
-    width: 100%;
-    aspect-ratio: 16 / 9;
+    width: 60%;
+    aspect-ratio: 1/1;
     border-radius: 12px;
     border: 1px solid #d0d0d0;
     background-color: #F3F3F3;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 100%;
 }
 
+.add-cover-strong{
+    justify-items: center;
+}
 .add-cover-box img {
     width: 100%;
     height: 100%;
@@ -132,7 +135,43 @@ body {
     font-weight: 600;
 }
 
+.row-group{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-bottom: 12px;
+    font-size: 16px;
+    color: var(--text-dark);
+}
+
+#select-faculty{
+    width: 70%;
+    height: 36px;
+    border: 1px solid var(--border-color);
+    border-radius: 6px;
+    background-color: #ffffff;
+    padding: 0px 10px;
+    font-size: 16px;
+    outline: none;
+    text-align: left;
+    box-sizing: border-box;
+}
+
+#select-years{
+    width: 15%;
+    height: 36px;
+    border: 1px solid var(--border-color);
+    border-radius: 6px;
+    background-color: #ffffff;
+    padding: 0px 10px;
+    font-size: 16px;
+    outline: none;
+    text-align: left;
+    box-sizing: border-box;
+}
+
 .add-room-form input[type="time"],
+.add-room-form input[type="email"],
 .add-room-form input[type="date"],
 .add-room-form input[type="text"],
 .add-room-form textarea,
@@ -235,7 +274,7 @@ body {
 .creditperson img {
     width: 18px;
     height: 18px;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .creditperson #not-checked-in {
@@ -255,7 +294,7 @@ body {
     resize: none;
 }
 
-strong {
+.add-home-main strong {
     display: block;
     font-weight: 600;
     font-size: 18px;
