--- a/css/page-my-account.css
+++ b/css/page-my-account.css
@@ -1,23 +1,23 @@
 .account-main {
     width: 100%;
-    padding: 20px;
     padding-bottom: 0;
     display: flex;
     flex-direction: column;
-    gap: 18px;
 }
 
 .account-profile {
     width: 100%;
     margin: 0 auto;
+    padding: 20px 20px 0 20px;
 }
 
 .account-container {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    gap: 14px;
-    margin-bottom: 12px;
+    align-content: baseline;
+    gap: 20px;
+    justify-content: center;
+
 }
 
 .account-profile-image {
@@ -29,16 +29,23 @@
     box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.05);
 }
 
-.account-profile img {
+.account-profile-image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
+.creditperson-container{
+    margin: 5px 5px 5px 35px;
+
+}
+
 .profile-info {
     display: flex;
     flex-direction: column;
+    align-items: baseline;
     gap: 2px;
+    padding: 10px;
 }
 
 .about-textarea {
@@ -69,12 +76,63 @@
 
 .account-tab-box {
     flex: 1;
-    height: 40px;
-    border-radius: 12px;
+    height: 46px;
+    width: 100%;
+    padding: 0px;
     border: none;
     background-color: #7A7A7A;
     color: #ffffff;
     font-size: 14px;
     font-weight: 600;
     cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    box-shadow: -1px 3px 5px 0px rgba(0,0,0,0.28);
+}
+
+.account-tab-box button{
+    flex:1;
+    align-items: center;
+    width: 100%;
+    height: 46px;
+    padding: 0px;
+    border: none;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.tab-btn-joined {
+    background-color: #FA5A16;
+    color: #ffffff;
+}
+.profile-button {
+    display: flex;
+    justify-items: space-between;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
+
+.profile-button button{
+    flex: 1;
+    height: 33px;
+    border-radius: 5px;
+    border: none;
+    background: #7B7B7B;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 700;
+    cursor: pointer;
+    margin: 12px;
+}
+
+.account-activities{
+    height: 100%;
+    width: 100%;
+}
+
+.account-item-activity {
+    width: 90%;
+    margin: 0 auto;
 }
