--- a/css/page-my-account.css
+++ b/css/page-my-account.css
@@ -81,6 +81,7 @@ body {
     padding-bottom: 0;
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
 .account-profile {
@@ -115,9 +116,8 @@ body {
     object-fit: cover;
 }
 
-.creditperson-container{
+.creditperson-container {
     margin: 5px 5px 5px 35px;
-
 }
 
 .profile-info {
@@ -142,67 +142,24 @@ body {
 
 .account-tabs {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 16px;
     margin-top: 4px;
     margin-bottom: 16px;
 }
 
-.account-tab-box {
-    flex: 1;
-    height: 46px;
+.account-tab-header {
+    text-align: center;
+    padding: 10px;
     width: 100%;
-    padding: 0px;
-    border: none;
-    background-color: #7A7A7A;
-    color: #ffffff;
-    font-size: 14px;
-    font-weight: 600;
-    cursor: pointer;
-<<<<<<< HEAD
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    box-shadow: -1px 3px 5px 0px rgba(0,0,0,0.28);
-}
-
-.account-tab-box button{
-    flex:1;
-    align-items: center;
-    width: 100%;
-    height: 46px;
-    padding: 0px;
-    border: none;
-    font-size: 14px;
-    font-weight: 700;
-}
-
-.tab-btn-joined {
     background-color: #FA5A16;
     color: #ffffff;
-}
-.profile-button {
-    display: flex;
-    justify-items: space-between;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
+    font-size: 18px;
+    font-weight: 600;
+    box-shadow: -1px 3px 5px 0px rgba(0, 0, 0, 0.28);
 }
 
-.profile-button button{
-    flex: 1;
-    height: 33px;
-    border-radius: 5px;
-    border: none;
-    background: #7B7B7B;
-    color: #ffffff;
-    font-size: 14px;
-    font-weight: 700;
-    cursor: pointer;
-    margin: 12px;
-}
-
-.account-activities{
+.account-activities {
     height: 100%;
     width: 100%;
 }
@@ -210,7 +167,6 @@ body {
 .account-item-activity {
     width: 90%;
     margin: 0 auto;
-=======
 }
 
 strong {
@@ -308,6 +264,9 @@ strong {
     flex-direction: column;
     align-items: center;
     gap: 12px;
+
+    position: relative;
+    bottom: 0px;
 }
 
 .footer-links {
@@ -348,5 +307,4 @@ strong {
 
 .add-cover-label {
     cursor: pointer;
->>>>>>> 5273795ce80c91e8ee35bd800fec59ba24161e7d
 }
