--- a/css/page-home.css
+++ b/css/page-home.css
@@ -289,7 +289,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 12px;
-    position: absolute;
+    position: relative;
     bottom: 0;
 }
 
