--- a/css/page-my-account.css
+++ b/css/page-my-account.css
@@ -130,7 +130,7 @@ body {
     flex-direction: column;
     align-items: baseline;
     gap: 2px;
-    padding: 10px;
+    padding: 0px 10px;
 }
 
 .about-textarea {
