--- a/css/page-my-account.css
+++ b/css/page-my-account.css
@@ -133,27 +133,11 @@ body {
     padding: 0px 10px;
 }
 
-.about-textarea {
-    width: 100%;
-    min-height: 110px;
-    border-radius: 10px;
-    border: 1px solid var(--border-color);
-    background-color: #F3F3F3;
-    padding: 8px 10px;
-    font-size: 14px;
-    resize: none;
-    outline: none;
-}
-
 .account-activity {
     display: flex;
     flex-direction: column;
     margin-top: 4px;
     margin-bottom: 16px;
-}
-
-.rooms-List {
-    padding: 20px 20px 0 20px;
 }
 
 .account-tab-header {
@@ -193,13 +177,15 @@ strong {
     width: 100%;
     padding: 7px 10px;
     min-height: 85px;
-    max-height: 150px;
+    max-height: 130px;
     border-radius: 10px;
     font-size: 16px;
     background-color: #F3F3F3;
     overflow: auto;
     border: none;
     resize: none;
+
+    field-sizing: content;
 }
 
 .tag-list-item {
@@ -233,7 +219,7 @@ strong {
 
 .profile-button a {
     text-align: center;
-    padding: 10px 15px;
+    padding: 8px 15px;
     max-width: 150px;
     height: 41px;
     align-items: center;
@@ -256,6 +242,177 @@ strong {
 
 .profile-button a:active {
     transform: scale(0.95);
+}
+
+/* room-item */
+.rooms-List {
+    width: 100%;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    padding: 20px 20px 0 20px;
+}
+
+.room-item {
+    width: 100%;
+    max-width: 500px;
+    margin: auto;
+    background: #F3F3F3;
+    border-radius: 7px;
+    overflow: hidden;
+    text-align: center;
+}
+
+/* header-item */
+.room-item .header-item {
+    position: relative;
+    background-image: url(/Resource/img/img1.jpg);
+    background-size: cover;
+    background-position: center;
+    background-clip: border-box;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100px;
+}
+
+.group-date-month {
+    height: 70px;
+    width: 40px;
+    display: inline-block;
+    position: absolute;
+    top: 0px;
+    right: 20px;
+    background-image: url(/Resource/img/bookmark.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    text-align: center;
+    line-height: 18px;
+    padding-top: 8px;
+    color: white;
+    font-size: large;
+}
+
+.date-activity {
+    font-size: 20px;
+}
+
+.address-activity {
+    color: #FA5A16;
+    border: #FA5A16 solid 1px;
+    border-radius: 3.5px;
+    padding: 0px 10px;
+}
+
+/* separator-line */
+.separator-line {
+    width: 95%;
+    border: #aaaaaa solid 2px;
+    border-radius: 25px;
+    margin: 5px auto;
+}
+
+/* body-item */
+.room-item .body-item {
+    padding: 10px;
+    padding-top: 0px;
+}
+
+.room-item li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.body-item {
+    display: flex;
+    flex-direction: column;
+}
+
+.first-row-item-body,
+.third-row-item-body {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.first-row-item-body {
+    font-size: 20px;
+}
+
+.third-row-item-body {
+    margin-top: 5px;
+}
+
+.third-row-item-body .time-activity {
+    font-size: 20px;
+}
+
+.first-row-item-body h2 {
+    text-align: left;
+    min-width: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.second-row-item-body {
+    display: flex;
+}
+
+.second-row-item-body li {
+    justify-content: start;
+    flex-wrap: wrap;
+}
+
+.tag-list-item {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.tag-list-item li {
+    color: #FA5A16;
+    border: #FA5A16 solid 1px;
+    border-radius: 3.5px;
+    padding: 0px 10px;
+    margin: 2px 5px;
+}
+
+.time-activity,
+.people-activity {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+/* btn-room-item */
+.btn-room-item {
+    border: none;
+    width: 100%;
+    height: 35px;
+    background-image: linear-gradient(180deg, var(--primary-color-dark) -1.34%, var(--primary-gradient-start) 119.5%);
+    background-color: var(--primary-color-light);
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.btn-room-item:hover {
+    background-image: none;
+    background-color: var(--primary-color-light);
+}
+
+.btn-room-item:active {
+    background-color: var(--primary-color);
 }
 
 /* footer */
