--- a/css/page-add-room.css
+++ b/css/page-add-room.css
@@ -42,13 +42,13 @@ body {
     padding-top: calc(30px + env(safe-area-inset-top));
     padding-left: calc(20px + env(safe-area-inset-left));
     padding-right: calc(20px + env(safe-area-inset-right));
-    padding-bottom: 18px;
+    padding-bottom: 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 
-    background: linear-gradient(180deg, #FA5A16 0%, #FA8816 100%);
+    background: linear-gradient(0deg, #FA8816 0.36%, #E85A34 99.64%);
     background-size: cover;
     color: var(--text-light);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .05);
@@ -72,6 +72,7 @@ body {
     text-align: center;
     font-size: 20px;
     font-weight: 600;
+    line-height: 38px;
 }
 
 .add-home-main {
@@ -82,7 +83,6 @@ body {
 }
 
 .add-cover-box {
-    width: 60%;
     aspect-ratio: 1/1;
     border-radius: 12px;
     border: 1px solid #d0d0d0;
@@ -90,12 +90,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 100%;
 }
 
-.add-cover-strong{
+.add-cover-strong {
     justify-items: center;
 }
+
 .add-cover-box img {
     width: 100%;
     height: 100%;
@@ -148,7 +148,7 @@ body {
     box-sizing: border-box;
 }
 
-input[type="time"].time-input{
+input[type="time"].time-input {
     padding: 0px 0px 0px 10px;
 }
 
@@ -247,7 +247,8 @@ input[type="time"].time-input{
 
 .add-room-form textarea {
     padding: 10px;
-    min-height: 150px;
+    height: 150px;
+    resize: none;
 }
 
 .detail-room-form .detail-textarea {
@@ -259,7 +260,8 @@ input[type="time"].time-input{
     resize: none;
 }
 
-.form-group label ,strong{
+.form-group label,
+strong {
     display: block;
     font-weight: 600;
     font-size: 18px;
