--- a/css/page-my-account.css
+++ b/css/page-my-account.css
@@ -91,6 +91,20 @@ body {
     flex-grow: 1;
 }
 
+.account-form {
+    margin-top: 10px;
+}
+
+.account-main-edit {
+    width: 100%;
+    padding-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    flex-grow: 1;
+    padding: 20px;
+}
+
 .account-profile {
     width: 100%;
     margin: 0 auto;
@@ -187,7 +201,6 @@ strong {
     border: none;
     resize: none;
     outline: none;
-
     field-sizing: content;
 }
 
@@ -459,8 +472,9 @@ strong {
 }
 
 .account-form .detail-textarea {
+    resize: none;
     padding: 10px;
-    min-height: 150px;
+    height: 150px;
 }
 
 .tag-list-item {
