--- a/css/page-home.css
+++ b/css/page-home.css
@@ -501,3 +501,23 @@ body {
 .filter-submit-btn:hover {
     opacity: 0.9;
 }
+
+.history-detail-btn {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 35px;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 0px 10px;
+    color: white;
+    transition: all 0.2s;
+    background: linear-gradient(180deg, #6C6C6C 33.08%, #D2D2D2 133.11%);
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.history-detail-btn:hover {
+    background: #717171;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+}
