--- a/public/css/page-home.css
+++ b/public/css/page-home.css
@@ -261,17 +261,13 @@ body {
         border-bottom: 1px solid #f0f0f0;
         transition: background-color 0.2s, color 0.2s;
         font-family: var(--font-main);
-        /* บังคับฟอนต์ */
     }
 
-    /* Hover แล้วเปลี่ยนสี */
     .dropdown-links a:hover {
         background-color: #fff3e0;
-        /* สีส้มอ่อนๆ */
         color: #FA5A16;
     }
 
-    /* ปุ่มออกจากระบบ (ตัวสุดท้าย) ไม่ต้องมีเส้นขีดล่าง */
     .dropdown-links li:last-child a {
         border-bottom: none;
     }
@@ -280,7 +276,18 @@ body {
         position: relative;
         font-weight: bold;
         opacity: 1;
-    }    
+    }
+
+    .desktop-nav a.active::after {
+        content: '';
+        position: absolute;
+        bottom: -10px;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background-color: #ffffff;
+        border-radius: 5px;
+    }
 }
 
 /* search-bar */
