--- a/public/css/page-my-account.css
+++ b/public/css/page-my-account.css
@@ -99,11 +99,11 @@ body {
         justify-content: space-between;
         align-items: center;
         height: 80px;
-    width: 100%;
-    padding-top: calc(10px + env(safe-area-inset-left));
-    padding-left: calc(20px + env(safe-area-inset-left));
-    padding-right: calc(20px + env(safe-area-inset-right));
-    padding-bottom: 0px;
+        width: 100%;
+        padding-top: calc(10px + env(safe-area-inset-left));
+        padding-left: calc(20px + env(safe-area-inset-left));
+        padding-right: calc(20px + env(safe-area-inset-right));
+        padding-bottom: 0px;
         /* พื้นหลังสีส้มไล่เฉด (ตามธีมเดิม) */
         background: var(--primary-gradient-start);
         background: linear-gradient(269deg, #FA7C16 -1.34%, #FA5A16 105.15%);
@@ -287,6 +287,7 @@ body {
     flex-direction: column;
     flex-grow: 1;
     background-color: #f4f4f4;
+    justify-content: center;
 }
 
 .account-form {
